# DCS-F18

./: .gitignore  DCS-F18-Library.kicad_sym
3DCAD/DDI/: DDI-BodySketch.dxf  DDI.20241201-131438.FCBak  DDI.20241205-182621.FCBak  DDI.FCStd
DCS-F18.pretty/: Connector_PinSocket_2.54mmPinSocket_3x03_P2.54mm_Vertical.kicad_mod
DDI/: DDI.kicad_pcb  DDI.kicad_prl  DDI.kicad_pro  DDI.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
DDI/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
Software/: Cargo.toml
Software/.fleet/: run.json
Software/DCS-BIOS-Viewer/: Cargo.toml  const-test.rs
Software/DCS-BIOS-Viewer/dcs-bios/: Cargo.toml
Software/DCS-BIOS-Viewer/dcs-bios-const-generator/: Cargo.toml
Software/DCS-BIOS-Viewer/dcs-bios-const-generator/src/: lib.rs  main.rs
Software/DCS-BIOS-Viewer/dcs-bios-viewer/: package-lock.json  package.json
Software/DCS-BIOS-Viewer/dcs-bios-viewer/src/: App.css  App.tsx
Software/DCS-BIOS-Viewer/dcs-bios-viewer/src-tauri/: Cargo.toml  tauri.conf.json
Software/DCS-BIOS-Viewer/dcs-bios-viewer/src-tauri/src/: data.rs  lib.rs  source.rs
Software/DCS-BIOS-Viewer/dcs-bios-viewer/src/Connect/: Connect.tsx
Software/DCS-BIOS-Viewer/dcs-bios-viewer/src/Metrics/: Metric.tsx  Metrics.tsx
Software/DCS-BIOS-Viewer/dcs-bios-viewer/src/View/: View.tsx
Software/DCS-BIOS-Viewer/dcs-bios/src/: dcs_bios_const.rs  lib.rs  packet.rs  parser.rs
Software/DCS-BIOS-Viewer/src/: lib.rs  main.rs  source.rs
Software/core/: Cargo.toml
Software/core/dcs-bios-rs/: Cargo.toml
Software/core/dcs-bios-rs/src/: lib.rs
Software/dcs-bios-cli/: Cargo.toml
Software/dcs-bios-cli/src/: filter.rs  lib.rs  main.rs
Software/dcs-bios-const/: Cargo.toml
Software/dcs-bios-const/src/: json_type.rs  lib.rs
Software/dcs-bios-rs/: Cargo.toml
Software/dcs-bios-rs/src/: error.rs  lib.rs  mem.rs
Software/dcs-bios-viewer/: package-lock.json  package.json
Software/dcs-bios-viewer/src/: App.css  Connect.tsx  Metric.tsx  Metrics.tsx  MetricsView.tsx
Software/dcs-bios-viewer/src-tauri/: Cargo.toml  tauri.conf.json
Software/dcs-bios-viewer/src-tauri/src/: lib.rs  modules.rs  source.rs
Software/dcs-f18-ddi/: Cargo.toml
Software/dcs-f18-ddi/src/: main.rs
Software/firmware/: Cargo.toml
Software/firmware/.cargo/: config.toml
Software/firmware/dcs-f18-ddi/: Cargo.toml
Software/firmware/dcs-f18-ddi/src/: ddi.rs  lib.rs  main.rs
Software/utils/: Cargo.toml
Software/utils/dcs-bios-cli/src/: filter.rs  main.rs
Software/utils/dcs-bios-const/src/: json_type.rs  lib.rs
Software/utils/dcs-bios-viewer/: package.json
Software/utils/dcs-bios-viewer/.fleet/: run.json
Software/utils/dcs-bios-viewer/src/: App.css  App.tsx  Metric.tsx  Metrics.tsx  MetricsView.tsx  main.tsx
Software/utils/dcs-bios-viewer/src-tauri/: Cargo.toml
Software/utils/dcs-bios-viewer/src-tauri/src/: lib.rs  main.rs
Utils/: wireshark-dcs-bios.lua
