[package]
name = "dcs-bios-root"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [ "dcs-bios-cli", "dcs-bios-const","dcs-bios-rs","dcs-bios-viewer/src-tauri","dcs-f18-ddi"]

[workspace.dependencies]
heapless = "0.8.0"
dcs-bios = {path = "dcs-bios-rs"}
dcs-bios-const = {path = "dcs-bios-const"}
