[package]
name = "dcs-f18-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = ["dcs-f18-ddi"]

[workspace.dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7"
embedded-hal-async = "1.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cyw43 = { version = "0.2.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.2.0", features = ["defmt"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.8.5", default-features = false }

embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-executor = { version = "0.6.0", features = [
    "defmt",
    "integrated-timers",
    "arch-cortex-m",
    "executor-thread",
    "task-arena-size-98304",
    "executor-interrupt",
] }
embassy-time = { version = "0.3.2", features = ["defmt"] }
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-usb = { version = "=0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "proto-ipv4",
    "proto-ipv6",
] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }

[lib]
test = false
bench = false
