[package]
edition = "2021"
name = "dcs-f18-ddi"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
mcp230xx = "0.1"
shared-bus = "=0.3.1"
embedded-hal-async.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
cyw43.workspace = true
cyw43-pio.workspace = true
static_cell.workspace = true
portable-atomic.workspace = true
log.workspace = true
rand.workspace = true
embedded-hal = "0.2.7"

embassy-rp.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-embedded-hal.workspace = true
embassy-usb.workspace = true
embassy-sync.workspace = true
embassy-futures.workspace = true
embassy-net.workspace = true
embassy-net-wiznet.workspace = true


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
